--- a/src/App.css
+++ b/src/App.css
@@ -11,11 +11,12 @@
   will-change: filter;
   transition: filter 300ms;
 }
-.logo:hover {
-  filter: drop-shadow(0 0 2em #646cffaa);
+.logo {
+  filter: drop-shadow(0 0 2em #646cffe6);
 }
-.logo.react:hover {
-  filter: drop-shadow(0 0 2em #61dafbaa);
+.logo.react {
+  filter: drop-shadow(0 0 2em #61dafbd7);
+  animation-delay: 2s;
 }
 
 @keyframes logo-spin {
