--- a/frontend/src/styles/RegularTicket.css
+++ b/frontend/src/styles/RegularTicket.css
@@ -107,12 +107,14 @@
       }
 
       &.qr-code {
-        height: 110px;
+        height: auto;
         min-height: unset;
         position: relative;
         border-radius: 20px 20px 10px 10px;
         display: flex;
+        flex-direction: column;
         align-items: center;
+
 
         /* //TODO: replace with svg */
         &::before {
@@ -137,6 +139,11 @@
         .qr {
           width: 70px;
           height: 70px;
+        }
+        
+        .qrcodeImageContainer img{
+          width: 100%;
+          height: 100%;
         }
 
         .description {
