--- a/frontend/src/styles/RegularTicket.css
+++ b/frontend/src/styles/RegularTicket.css
@@ -67,7 +67,7 @@
         display: flex;
         flex-direction: row;
         justify-content: space-between;
-        align-items:flex-start;
+        align-items: flex-start;
         margin: 30px 0;
 
         .plane-icon {
@@ -115,7 +115,6 @@
         flex-direction: column;
         align-items: center;
 
-
         /* //TODO: replace with svg */
         &::before {
           content: "";
@@ -140,8 +139,8 @@
           width: 70px;
           height: 70px;
         }
-        
-        .qrcodeImageContainer img{
+
+        .qrcodeImageContainer img {
           width: 100%;
           height: 100%;
         }
@@ -211,6 +210,32 @@
   text-align: right;
 }
 
-.route div{
-  flex : 1; 
+.route div {
+  flex: 1;
+}
+
+.passenger-details span {
+  color: black !important;
+}
+
+.zoomOnHover {
+  outline: 0;
+  -webkit-transition: -webkit-transform 0.5s;
+  transition: transform 0.5s;
+}
+
+.zoomOnHover:focus {
+  -webkit-transform: scale(1.3);
+  -ms-transform: scale(1.3);
+  transform: scale(1.3);
+  z-index: 1;
+  border: 1px solid #000;
+}
+
+.text-ticket {
+  font-family: "Courier New", Courier, monospace !important;
+  font-weight: normal !important;
+  color: black !important;
+  font-size: 0.8rem !important;
+  margin-left: auto;
 }
